Fase Inicio: ediciones pequeñas en el código

--- a/Proyecto.Web/Proyecto.Web.csproj
+++ b/Proyecto.Web/Proyecto.Web.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Flotas\Controllers\" />
+    <Folder Include="Areas\Flotas\Views\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
